fixed create trail form by reducing the margin spacing

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -226,7 +226,7 @@ div.home-description {
   width: 100%;
   border: 3px solid #cccccc;
   border-radius: 3px;
-  margin-bottom: 1.8em;
+  margin-bottom: 1.4em;
   padding: 5px;
 }
 
